syntax = "proto3";
package fb2;

message PFB2 {
  string ID = 1;
  Description Description = 2;
  Body Body = 3;
  repeated Binary Binary = 4;
}

message Binary {
  string Value = 1;
  string ContentType = 2;
  string ID = 3;
}

message Body {
  repeated Section Sections = 1;
}

message Section {
  repeated string P = 1;
}

message Description {
  TitleInfo TitleInfo = 1;
  DocumentInfo DocumentInfo = 2;
  PublishInfo PublishInfo = 3;
}

message TitleInfo {
  repeated string Genre = 1;
  repeated string GenreType = 2;
  repeated AuthorType Author = 3;
  string BookTitle = 4;
  string Annotation = 5;
  string Keywords = 6;
  string Date = 7;
  Coverpage Coverpage = 8;
  string Lang = 9;
  string SrcLang = 10;
  AuthorType Translator = 11;
  string Sequence = 12;
}

message PublishInfo {
  string BookName = 1;
  string Publisher = 2;
  string City = 3;
  int64 Year = 4;
  string ISBN = 5;
  string Sequence = 6;
}

message DocumentInfo {
  repeated AuthorType Author = 1;
  string ProgramUsed = 2;
  string Date = 3;
  repeated string SrcURL = 4;
  string SrcOcr = 5;
  string ID = 6;
  float Version = 7;
  string History = 8;
}

message Coverpage {
  Image Image = 1;
}

message Image {
  string Href = 1;
}

message AuthorType {
  string FirstName = 1;
  string MiddleName = 2;
  string LastName = 3;
  string Nickname = 4;
  string HomePage = 5;
  string Email = 6;
}